k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-catalog
spec:
  selector:
    app: book-catalog
  ports:
    - name: http
      port: 80
      targetPort: http
