k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-catalog
spec:
  ingressClassName: nginx
  rules:
    - host: books.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-catalog
                port:
                  name: http
